@@ -68,7 +68,7 @@
     <li><a href="./option_spacegroup.html">spacegroup</a> - Apply symmetry operations of a space group</li>
     <li><a href="./option_stress.html">stress</a> - Apply stress to the system</li>
     <li><a href="./option_substitute.html">substitute</a> - Replace atoms by other atoms</li>
-    <li><a href="./option_swap.html">swap</a> - Swap atoms or Cartesian axes</li>
+    <li><a href="./option_swap.html">swap</a> - Swap two atoms, or Cartesian axes, or auxiliary properties</li>
     <li><a href="./option_torsion.html">torsion</a> - Apply torsion along an axis</li>
     <li><a href="./option_unit.html">unit</a> - Change the unit of coordinates</li>
     <li><a href="./option_unskew.html">unskew</a> - Reduce the skew of the box</li>
