@@ -68,7 +68,7 @@
     <li><a href="./option_spacegroup.html">spacegroup</a> - Appliquer les symétries d'un groupe d'espace</li>
     <li><a href="./option_stress.html">stress</a> - Appliquer une contrainte au système</li>
     <li><a href="./option_substitute.html">substitute</a> - Remplacer des atomes par d'autres atomes</li>
-    <li><a href="./option_swap.html">swap</a> - Échanger deux atomes ou deux axes</li>
+    <li><a href="./option_swap.html">swap</a> - Échanger deux atomes, deux axes, ou deux propriétés</li>
     <li><a href="./option_torsion.html">torsion</a> - Appliquer une torsion le long d'un axe</li>
     <li><a href="./option_unit.html">unit</a> - Changer de système d'unités</li>
     <li><a href="./option_unskew.html">unskew</a> - Réduire le cisaillement de la boîte</li>
