@@ -1993,7 +1993,7 @@ CASE(2111)
       & TRIM(ADJUSTL(msg))//" K."
   CALL DISPLAY_MSG(verbosity,msg,logfile)
 CASE(2112)
-  msg = "..> Atom velocities were successfuly set up."
+  msg = "..> Atom velocities were successfully set up."
   CALL DISPLAY_MSG(verbosity,msg,logfile)
 CASE(2113)
   !strings(1) = file name
@@ -2122,24 +2122,26 @@ CASE(2124)
   END SELECT
   CALL DISPLAY_MSG(verbosity,msg,logfile)
 CASE(2125)
+  !reals(1) = type of item to swap: 0=Cartesian axes, 1=atom id, 2= atom species, 3=aux.prop.
   !strings(1) = Cartesian axis, or integer
   !strings(2) = same type as strings(1)
-  SELECT CASE(strings(1))
-  CASE('x','X','y','Y','z','Z')
+  SELECT CASE(NINT(reals(1)))
+  CASE(0)
     msg = ">>> Swapping Cartesian axes "//TRIM(ADJUSTL(strings(1)))//" and "//TRIM(ADJUSTL(strings(2)))//"."
-  CASE DEFAULT
+  CASE(1)
     msg = ">>> Swapping atoms #"//TRIM(ADJUSTL(strings(1)))//" and #"//TRIM(ADJUSTL(strings(2)))//"."
+  CASE(2)
+    msg = ">>> Swapping atoms of "//TRIM(ADJUSTL(strings(1)))//" and "//TRIM(ADJUSTL(strings(2)))//"."
+  CASE(3)
+    msg = ">>> Swapping auxiliary properties '"//TRIM(ADJUSTL(strings(1)))//"' and '"//TRIM(ADJUSTL(strings(2)))//"'."
   END SELECT
   CALL DISPLAY_MSG(verbosity,msg,logfile)
 CASE(2126)
-  !reals(1) = number of atoms that were swapped
-  IF( NINT(reals(1))==0 ) THEN
+  !reals(1) = number of values that were swapped
+  IF( NINT(reals(1))<=0 ) THEN
     msg = "..> No such atom exist in the system."
-  ELSEIF( NINT(reals(1))>0 ) THEN
-    WRITE(temp,*) NINT(reals(1))
-    msg = "..> The chemical species of "//TRIM(ADJUSTL(temp))//" atoms were changed."
   ELSE
-    msg = "..> Swap successful."
+    msg = "..> Swap was successful."
   ENDIF
   CALL DISPLAY_MSG(verbosity,msg,logfile)
 CASE(2127)
